dll build allmost working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.7)
 
-project(libmagic)
+project(file)
 
 set(WIN_COMPAT_SOURCES 
             file/src/asctime_r.c
@@ -16,6 +16,7 @@ set(WIN_COMPAT_SOURCES
             file/src/strlcpy.c
             file/src/vasprintf.c
             file/src/fmtcheck.c
+            win-headers/magic.exp
 )
 
 set(LIBMAGIC_SOURCE_FILES
@@ -39,14 +40,19 @@ set(LIBMAGIC_SOURCE_FILES
 )
 
 # configure_file(${CMAKE_CURRENT_SOURCE_DIR}/file/src/magic.h.in ${CMAKE_CURRENT_SOURCE_DIR}/file/src/magic.h)
-add_definitions(-DHAVE_CONFIG_H -DVERSION="5.31" -DWIN32_LEAN_AND_MEAN -DPCRE2_STATIC)
-add_library(libmagic ${LIBMAGIC_SOURCE_FILES})
+add_definitions(-DHAVE_CONFIG_H -DVERSION="5.31" -DWIN32_LEAN_AND_MEAN -DWIN32 -DPCRE2_STATIC )
+add_library(libmagic SHARED ${LIBMAGIC_SOURCE_FILES})
 include_directories (${CMAKE_CURRENT_SOURCE_DIR}/win-headers pcre/src file/src dirent/include getopt)
+target_link_libraries(libmagic pcre2-posix shlwapi)
 
 add_subdirectory(pcre)
 add_executable(file file/src/file.c)
 target_link_libraries(file libmagic pcre2-posix shlwapi)
 
+# add_custom_command(TARGET ${PROJECT_NAME}
+# COMMAND file 
+# DEPENDS file
+# )
 
 # file(RENAME ${CMAKE_CURRENT_SOURCE_DIR}/pcre/src/pcre2posix.h
 #         DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/pcre/src/regex.h)
