--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(WIN_COMPAT_SOURCES
             file/src/strlcpy.c
             file/src/vasprintf.c
             file/src/fmtcheck.c
-            win-headers/magic.exp
+            win-headers/magic.def
 )
 
 set(LIBMAGIC_SOURCE_FILES
@@ -42,10 +42,10 @@ set(LIBMAGIC_SOURCE_FILES
 # configure_file(${CMAKE_CURRENT_SOURCE_DIR}/file/src/magic.h.in ${CMAKE_CURRENT_SOURCE_DIR}/file/src/magic.h)
 add_definitions(-DHAVE_CONFIG_H -DVERSION="5.31" -DWIN32_LEAN_AND_MEAN -DWIN32 -DPCRE2_STATIC )
 add_library(libmagic SHARED ${LIBMAGIC_SOURCE_FILES})
-include_directories (${CMAKE_CURRENT_SOURCE_DIR}/win-headers pcre/src file/src dirent/include getopt)
+include_directories (${CMAKE_CURRENT_SOURCE_DIR}/win-headers pcre2/src file/src dirent/include getopt)
 target_link_libraries(libmagic pcre2-posix shlwapi)
 
-add_subdirectory(pcre)
+add_subdirectory(pcre2)
 add_executable(file file/src/file.c)
 target_link_libraries(file libmagic pcre2-posix shlwapi)
 
