--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,6 +68,12 @@ build_script:
   - ps: 'Write-Host "Running $env:BUILDER:" -ForegroundColor Magenta'
   - cmake --build . --config %CONFIGURATION%
   
+artifacts:
+ - path: libmagic.dll
+ - path: file.exe
+ - path: magic.mgc
+
+
 
 # If you need to debug AppVeyor session (https://www.appveyor.com/docs/how-to/rdp-to-build-worker), then:
 # 1. Uncomment the on_finish section below:
