--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,15 +83,15 @@ add_executable(file_test file/tests/test.c)
 target_link_libraries(file_test libmagic pcre2-posix shlwapi)
 target_link_libraries(file libmagic pcre2-posix shlwapi)
 
-# TODO: testing
-# enable_testing()
-# file(GLOB files "file/tests/*.testfile")
-# foreach(FILE ${files})
-#   string(REGEX MATCH "(.*).testfile" TESTPATH ${FILE})
-#   string(REGEX MATCH "\\/(.*).testfile" TESTNAME ${FILE})
-#   MESSAGE(${TESTNAME})
-#   add_test(NAME ${TESTNAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/file_test ${FILE} ${TESTPATH}.result)
-# endforeach()
+enable_testing()
+file(GLOB TESTFILES "file/tests/*.testfile")
+foreach(TEST_FILE ${TESTFILES})
+  # extract testname from path and generate command
+  string(REGEX MATCH  "(.*)\.testfile" TESTPATH ${TEST_FILE})
+  set(TESTPATH ${CMAKE_MATCH_1})
+  string(REGEX MATCH  "([a-zA-Z0-9_]|-|\\.)+$" TESTNAME ${TESTPATH})
+  add_test(NAME ${TESTNAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/file_test ${TEST_FILE} ${TESTPATH}.result)
+endforeach()
 
 
 # Following is the compilation of the magic file
