--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,14 @@ add_executable(file_test file/tests/test.c)
 target_link_libraries(file_test libmagic pcre2-posix shlwapi)
 target_link_libraries(file libmagic pcre2-posix shlwapi)
 
+
+# this tests all because of time-zone or crlf errors
+set(DISABLED_TESTS 
+  gedcom
+  fit-map-data
+  regex-eol
+  )
+
 enable_testing()
 file(GLOB TESTFILES "file/tests/*.testfile")
 foreach(TEST_FILE ${TESTFILES})
@@ -90,7 +98,9 @@ foreach(TEST_FILE ${TESTFILES})
   string(REGEX MATCH  "(.*)\.testfile" TESTPATH ${TEST_FILE})
   set(TESTPATH ${CMAKE_MATCH_1})
   string(REGEX MATCH  "([a-zA-Z0-9_]|-|\\.)+$" TESTNAME ${TESTPATH})
-  add_test(NAME ${TESTNAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/file_test ${TEST_FILE} ${TESTPATH}.result)
+  if(NOT ${TESTNAME} IN_LIST DISABLED_TESTS)
+      add_test(NAME ${TESTNAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/file_test ${TEST_FILE} ${TESTPATH}.result)
+  endif()
 endforeach()
 
 
