--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,30 +16,14 @@ matrix:
 
 environment:
   matrix:
-    # - PLATFORM: x64
-    #   BUILDER: CMake
-    #   GENERATOR: "Visual Studio 15 2017 Win64"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - PLATFORM: x86
-    #   BUILDER: CMake
-    #   GENERATOR: "Visual Studio 15 2017"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - PLATFORM: x64
-    #   BUILDER: CMake
-    #   GENERATOR: "NMake Makefiles"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - PLATFORM: x86
-    #   BUILDER: CMake
-    #   GENERATOR: "NMake Makefiles"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - PLATFORM: x64
-    #   BUILDER: CMake
-    #   GENERATOR: "Visual Studio 14 2015 Win64"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    # - PLATFORM: x86
-    #   BUILDER: CMake
-    #   GENERATOR: "Visual Studio 14 2015"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    - PLATFORM: x86
+      BUILDER: CMake
+      GENERATOR: "NMake Makefiles"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - PLATFORM: x64
+      BUILDER: CMake
+      GENERATOR: "NMake Makefiles"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     - PLATFORM: x64
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
