--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 # thanks: https://github.com/OSGeo/geos/blob/master/appveyor.yml
 
-version: 5.38.{build}
+version: 5.38
 
 image: Visual Studio 2019
 
@@ -8,7 +8,7 @@ platform: x64
 
 configuration: Release
 
-# shallow_clone: true
+shallow_clone: true
 # clone_depth: 5
 
 matrix:
@@ -20,24 +20,30 @@ environment:
       BUILDER: CMake
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      MSVC_NAME: vs2019
     - PLATFORM: x64
       BUILDER: CMake
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      MSVC_NAME: vs2019
     - PLATFORM: x86
       BUILDER: CMake
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      MSVC_NAME: vs2017
     - PLATFORM: x64
       BUILDER: CMake
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      MSVC_NAME: vs2017
     - PLATFORM: x64
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      MSVC_NAME: vs2015
     - PLATFORM: x86
       GENERATOR: "NMake Makefiles"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      MSVC_NAME: vs2015
 
 init:
   - ps: 'Write-Host "Building GEOS branch: $env:APPVEYOR_REPO_BRANCH" -ForegroundColor Magenta'
@@ -67,15 +73,16 @@ build_script:
 test_script:
   - ctest
 
-  
-artifacts:
- - path: libmagic.dll
- - path: file.exe
- - path: magic.mgc
+after_build:
+  # file_5.32-vs2015-x64.zip
+  - 7z a file_%APPVEYOR_BUILD_VERSION%-%MSVC_NAME%-%PLATFORM%.zip libmagic.dll file.exe magic.mgc
 
-deploy:
-  auth_token: FWNoOYIec8CGUTHOKBihYmj9cxd+kHUq1U9jAuXcrQ5ZXvJmOpQ+M6kBrtmWNIs1
-  provider: GitHub
+artifacts:
+ - path: file_%APPVEYOR_BUILD_VERSION%-%MSVC_NAME%-%PLATFORM%.zip
+
+# deploy:
+#   auth_token: FWNoOYIec8CGUTHOKBihYmj9cxd+kHUq1U9jAuXcrQ5ZXvJmOpQ+M6kBrtmWNIs1
+#   provider: GitHub
 
 
 
