--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 # thanks: https://github.com/OSGeo/geos/blob/master/appveyor.yml
 
-version: 5.38
+version: 5.38-build{build}
 
 image: Visual Studio 2019
 
